--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -6,6 +6,6 @@ JWT_EXPIRE = 5d
 COOKIE_EXPIRE= 5
 SMTP_MAIL='careerforsanjay@gmail.com'
 SMTP_SERVICE='gmail'
-SMTP_PASS='12LOGAN@34'
+SMTP_PASS=pjtfnkrykxjogxic
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
